--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "948aca9e",
    "metadata": {},
    "outputs": [
@@ -10,73 +10,136 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Anime Dataset Info:\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 12294 entries, 0 to 12293\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column    Non-Null Count  Dtype  \n",
-      "---  ------    --------------  -----  \n",
-      " 0   anime_id  12294 non-null  int64  \n",
-      " 1   name      12294 non-null  object \n",
-      " 2   genre     12232 non-null  object \n",
-      " 3   type      12269 non-null  object \n",
-      " 4   episodes  12294 non-null  object \n",
-      " 5   rating    12064 non-null  float64\n",
-      " 6   members   12294 non-null  int64  \n",
-      "dtypes: float64(1), int64(2), object(4)\n",
-      "memory usage: 672.5+ KB\n",
-      "None\n",
+      "Number of columns in anime.csv:  7\n",
+      "Index(['anime_id', 'name', 'genre', 'type', 'episodes', 'rating', 'members'], dtype='object')\n",
       "\n",
-      "Rating Dataset Info:\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 7813737 entries, 0 to 7813736\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column    Dtype\n",
-      "---  ------    -----\n",
-      " 0   user_id   int64\n",
-      " 1   anime_id  int64\n",
-      " 2   rating    int64\n",
-      "dtypes: int64(3)\n",
-      "memory usage: 178.8 MB\n",
-      "None\n",
+      "Number of rows in anime.csv:  12294\n",
       "\n",
-      "Anime Dataset Summary:\n",
-      "            anime_id                     name   genre   type episodes  \\\n",
-      "count   12294.000000                    12294   12232  12269    12294   \n",
-      "unique           NaN                    12292    3264      6      187   \n",
-      "top              NaN  Shi Wan Ge Leng Xiaohua  Hentai     TV        1   \n",
-      "freq             NaN                        2     823   3787     5677   \n",
-      "mean    14058.221653                      NaN     NaN    NaN      NaN   \n",
-      "std     11455.294701                      NaN     NaN    NaN      NaN   \n",
-      "min         1.000000                      NaN     NaN    NaN      NaN   \n",
-      "25%      3484.250000                      NaN     NaN    NaN      NaN   \n",
-      "50%     10260.500000                      NaN     NaN    NaN      NaN   \n",
-      "75%     24794.500000                      NaN     NaN    NaN      NaN   \n",
-      "max     34527.000000                      NaN     NaN    NaN      NaN   \n",
+      "Number of duplicate anime_id in anime.csv:  0\n",
       "\n",
-      "              rating       members  \n",
-      "count   12064.000000  1.229400e+04  \n",
-      "unique           NaN           NaN  \n",
-      "top              NaN           NaN  \n",
-      "freq             NaN           NaN  \n",
-      "mean        6.473902  1.807134e+04  \n",
-      "std         1.026746  5.482068e+04  \n",
-      "min         1.670000  5.000000e+00  \n",
-      "25%         5.880000  2.250000e+02  \n",
-      "50%         6.570000  1.550000e+03  \n",
-      "75%         7.180000  9.437000e+03  \n",
-      "max        10.000000  1.013917e+06  \n",
+      "Number of unique genre: 43\n",
+      "Unique genre: ['Drama' 'Romance' 'School' 'Supernatural' 'Action' 'Adventure' 'Fantasy'\n",
+      " 'Magic' 'Military' 'Shounen' 'Comedy' 'Historical' 'Parody' 'Samurai'\n",
+      " 'Sci-Fi' 'Thriller' 'Sports' 'Super Power' 'Space' 'Slice of Life'\n",
+      " 'Mecha' 'Music' 'Mystery' 'Seinen' 'Martial Arts' 'Vampire' 'Shoujo'\n",
+      " 'Horror' 'Police' 'Psychological' 'Demons' 'Ecchi' 'Josei' 'Shounen Ai'\n",
+      " 'Game' 'Dementia' 'Harem' 'Cars' 'Kids' 'Shoujo Ai' 'Hentai' 'Yaoi'\n",
+      " 'Yuri']\n",
       "\n",
-      "Rating Dataset Summary:\n",
-      "            user_id      anime_id        rating\n",
-      "count  7.813737e+06  7.813737e+06  7.813737e+06\n",
-      "mean   3.672796e+04  8.909072e+03  6.144030e+00\n",
-      "std    2.099795e+04  8.883950e+03  3.727800e+00\n",
-      "min    1.000000e+00  1.000000e+00 -1.000000e+00\n",
-      "25%    1.897400e+04  1.240000e+03  6.000000e+00\n",
-      "50%    3.679100e+04  6.213000e+03  7.000000e+00\n",
-      "75%    5.475700e+04  1.409300e+04  9.000000e+00\n",
-      "max    7.351600e+04  3.451900e+04  1.000000e+01\n"
+      "Number of unique type: 6\n",
+      "Unique type: ['Movie' 'TV' 'OVA' 'Special' 'Music' 'ONA']\n",
+      "\n",
+      "Number of rows with missing values in anime.csv:  277\n",
+      "\n",
+      "Rows with missing values in anime.csv:\n",
+      "       anime_id                                       name genre     type  \\\n",
+      "2844     33242  IS: Infinite Stratos 2 - Infinite Wedding   NaN  Special   \n",
+      "3541     33589                              ViVid Strike!   NaN       TV   \n",
+      "6040     29765                          Metropolis (2009)   NaN    Movie   \n",
+      "6646     32695                               Match Shoujo   NaN      ONA   \n",
+      "7018     33187                           Katsudou Shashin   NaN    Movie   \n",
+      "\n",
+      "     episodes  rating  members  \n",
+      "2844        1    7.15     6604  \n",
+      "3541       12    6.96    12345  \n",
+      "6040        1    6.27      313  \n",
+      "6646        1    6.02      242  \n",
+      "7018        1    5.79      607  \n",
+      "\n",
+      "Columns with missing values in anime.csv:\n",
+      " rating    230\n",
+      "genre      62\n",
+      "type       25\n",
+      "dtype: int64\n",
+      "\n",
+      "Columns with 'Unknown' as value in anime.csv:\n",
+      " episodes    340\n",
+      "dtype: int64\n",
+      "\n",
+      "Top 3 anime with most episodes:\n",
+      "       anime_id                    name  \\\n",
+      "6296     12393              Oyako Club   \n",
+      "929       2471         Doraemon (1979)   \n",
+      "9243     23349  Kirin Monoshiri Yakata   \n",
+      "\n",
+      "                                                  genre type  episodes  \\\n",
+      "6296                              Comedy, Slice of Life   TV    1818.0   \n",
+      "929   Adventure, Comedy, Fantasy, Kids, Sci-Fi, Shounen   TV    1787.0   \n",
+      "9243                                               Kids   TV    1565.0   \n",
+      "\n",
+      "      rating  members  \n",
+      "6296    6.18      160  \n",
+      "929     7.76    14233  \n",
+      "9243    5.56      116  \n",
+      "\n",
+      "Top 3 anime with least episodes:\n",
+      "        anime_id                             name  \\\n",
+      "3520       2520             Dragon Ball Specials   \n",
+      "11208     10694    Bloods: Inraku no Ketsuzoku 2   \n",
+      "5733       8042  Taishou Yakyuu Musume. Specials   \n",
+      "\n",
+      "                                       genre     type  episodes  rating  \\\n",
+      "3520   Comedy, Fantasy, Shounen, Super Power  Special       2.0    6.96   \n",
+      "11208                                 Hentai      OVA       2.0    7.09   \n",
+      "5733                          School, Sports  Special       2.0    6.37   \n",
+      "\n",
+      "       members  \n",
+      "3520     14575  \n",
+      "11208     7086  \n",
+      "5733       907  \n",
+      "\n",
+      "Top 3 anime with most members:\n",
+      "      anime_id                name  \\\n",
+      "40       1535          Death Note   \n",
+      "86      16498  Shingeki no Kyojin   \n",
+      "804     11757    Sword Art Online   \n",
+      "\n",
+      "                                                 genre type  episodes  rating  \\\n",
+      "40   Mystery, Police, Psychological, Supernatural, ...   TV      37.0    8.71   \n",
+      "86        Action, Drama, Fantasy, Shounen, Super Power   TV      25.0    8.54   \n",
+      "804          Action, Adventure, Fantasy, Game, Romance   TV      25.0    7.83   \n",
+      "\n",
+      "     members  \n",
+      "40   1013917  \n",
+      "86    896229  \n",
+      "804   893100  \n",
+      "\n",
+      "Top 3 anime with least members:\n",
+      "        anime_id                                               name  \\\n",
+      "10997     34527  Gou-chan. Moko to Chinjuu no Mori no Nakama-tachi   \n",
+      "10990     34485                                         Ganko-chan   \n",
+      "10444     34490                                     Sushi Azarashi   \n",
+      "\n",
+      "                 genre   type  episodes  rating  members  \n",
+      "10997  Adventure, Kids  Movie       1.0     NaN        5  \n",
+      "10990              NaN    NaN       NaN     NaN       11  \n",
+      "10444           Comedy     TV      30.0     3.0       12  \n",
+      "\n",
+      "Top 3 anime with highest rating:\n",
+      "        anime_id                                     name            genre  \\\n",
+      "10464     33662  Taka no Tsume 8: Yoshida-kun no X-Files   Comedy, Parody   \n",
+      "10400     30120              Spoon-hime no Swing Kitchen  Adventure, Kids   \n",
+      "9595      23005                         Mogura no Motoro    Slice of Life   \n",
+      "\n",
+      "        type  episodes  rating  members  \n",
+      "10464  Movie       1.0    10.0       13  \n",
+      "10400     TV       NaN     9.6       47  \n",
+      "9595   Movie       1.0     9.5       62  \n",
+      "\n",
+      "Top 3 anime with lowest rating:\n",
+      "        anime_id                                name                  genre  \\\n",
+      "9991      34476  Platonic Chain: Ansatsu Jikkouchuu  Sci-Fi, Slice of Life   \n",
+      "12258     20007       Hi Gekiga Ukiyoe Senya Ichiya         Action, Hentai   \n",
+      "8058       3287        Tenkuu Danzai Skelter+Heaven          Mecha, Sci-Fi   \n",
+      "\n",
+      "          type  episodes  rating  members  \n",
+      "9991   Special       1.0    1.67       51  \n",
+      "12258    Movie       1.0    1.92      129  \n",
+      "8058       OVA       1.0    2.00     7680  \n",
+      "Number of columns in rating.csv:  3\n",
+      "Index(['user_id', 'anime_id', 'rating'], dtype='object')\n",
+      "\n",
+      "Number of rows in rating.csv:  7813737\n"
      ]
     }
    ],
@@ -84,23 +147,92 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "############### Helper functions ###############\n",
+    "\n",
+    "def count_unique_elements(df: pd.DataFrame, col: str) -> int:\n",
+    "    col_series = df[col].dropna()\n",
+    "    all_different_value_col = col_series.str.split(',').explode().str.strip() # Split each genre string by comma and flatten the list\n",
+    "    unique_value_col = all_different_value_col.unique()\n",
+    "    print(f\"\\nNumber of unique {col}:\", len(unique_value_col))\n",
+    "    print(f\"Unique {col}:\", unique_value_col)\n",
     "\n",
     "############### TASK 1 (Explore and describe the data) ###############\n",
     "\n",
-    "# Load the dataset\n",
+    "# --------- Analyze anime.csv --------- \n",
+    "# 1. Load the dataset\n",
     "anime_df = pd.read_csv('data/anime.csv')\n",
-    "rating_df = pd.read_csv('data/rating.csv')\n",
+    "# 2. Basic checks\n",
+    "print(\"Number of columns in anime.csv: \", len(anime_df.columns))\n",
+    "print(anime_df.columns)\n",
+    "print(\"\\nNumber of rows in anime.csv: \", len(anime_df))\n",
+    "# check if anime_id contains duplicates\n",
+    "anime_id_duplicates = anime_df['anime_id'].duplicated().sum()\n",
+    "print(\"\\nNumber of duplicate anime_id in anime.csv: \", anime_id_duplicates)\n",
+    "# check unique genres\n",
+    "count_unique_elements(anime_df, 'genre')\n",
+    "# check unique type\n",
+    "count_unique_elements(anime_df, 'type')\n",
+    "# check rows that contain missing values, if same row has multiple missing values count only once\n",
+    "missing_values = anime_df.isnull().sum(axis=1) > 0\n",
+    "missing_values_count = missing_values.sum()\n",
+    "print(\"\\nNumber of rows with missing values in anime.csv: \", missing_values_count)\n",
+    "print(\"\\nRows with missing values in anime.csv:\\n\", anime_df[missing_values].head(5))\n",
+    "# check col with most missing values\n",
+    "missing_values_count = anime_df.isnull().sum()\n",
+    "missing_values_count = missing_values_count[missing_values_count > 0]\n",
+    "missing_values_count = missing_values_count.sort_values(ascending=False)\n",
+    "print(\"\\nColumns with missing values in anime.csv:\\n\", missing_values_count)\n",
+    "# check cols with 'Unknown' as value\n",
+    "unknown_values_count = anime_df.isin(['Unknown']).sum()\n",
+    "unknown_values_count = unknown_values_count[unknown_values_count > 0]\n",
+    "unknown_values_count = unknown_values_count.sort_values(ascending=False)\n",
+    "print(\"\\nColumns with 'Unknown' as value in anime.csv:\\n\", unknown_values_count)\n",
+    "# check anime with most episodes, ignore the ones with 'Unknown' as value\n",
+    "anime_df['episodes'] = pd.to_numeric(anime_df['episodes'], errors='coerce')\n",
+    "most_episodes = anime_df[anime_df['episodes'] != 'Unknown'].sort_values(by='episodes', ascending=False).head(3)\n",
+    "print(\"\\nTop 3 anime with most episodes:\\n\", most_episodes)\n",
+    "# chec anime with least episodes, ignore the ones with 'Unknwon' as value and 1 episode (film)\n",
+    "least_episodes = anime_df[anime_df['episodes'] != 'Unknown']\n",
+    "least_episodes = least_episodes[least_episodes['episodes'] != 1]\n",
+    "least_episodes = least_episodes.sort_values(by='episodes', ascending=True).head(3)\n",
+    "print(\"\\nTop 3 anime with least episodes:\\n\", least_episodes)\n",
+    "# check anime with most members\n",
+    "anime_df['members'] = pd.to_numeric(anime_df['members'], errors='coerce')\n",
+    "most_members = anime_df.sort_values(by='members', ascending=False).head(3)\n",
+    "print(\"\\nTop 3 anime with most members:\\n\", most_members)\n",
+    "# check anime with least members\n",
+    "least_members = anime_df[anime_df['members'] != 'Unknown']\n",
+    "least_members = least_members[least_members['members'] != 0]\n",
+    "least_members = least_members.sort_values(by='members', ascending=True).head(3)\n",
+    "print(\"\\nTop 3 anime with least members:\\n\", least_members)\n",
+    "# check anime with highest rating\n",
+    "anime_df['rating'] = pd.to_numeric(anime_df['rating'], errors='coerce')\n",
+    "highest_rating = anime_df.sort_values(by='rating', ascending=False).head(3)\n",
+    "print(\"\\nTop 3 anime with highest rating:\\n\", highest_rating)\n",
+    "# check anime with lowest rating\n",
+    "lowest_rating = anime_df[anime_df['rating'] != 0]\n",
+    "lowest_rating = lowest_rating.sort_values(by='rating', ascending=True).head(3)\n",
+    "print(\"\\nTop 3 anime with lowest rating:\\n\", lowest_rating)\n",
     "\n",
-    "print(\"Anime Dataset Info:\")\n",
-    "print(anime_df.info())\n",
-    "print(\"\\nRating Dataset Info:\")\n",
-    "print(rating_df.info())\n",
     "\n",
-    "print(\"\\nAnime Dataset Summary:\")\n",
-    "print(anime_df.describe(include='all'))\n",
-    "print(\"\\nRating Dataset Summary:\")\n",
-    "print(rating_df.describe())"
+    "# --------- Analyze rating.csv --------- \n",
+    "# 1. Load the dataset\n",
+    "rating_df = pd.read_csv('data/rating.csv') \n",
+    "# 2. Basic checks\n",
+    "print(\"Number of columns in rating.csv: \", len(rating_df.columns))\n",
+    "print(rating_df.columns)\n",
+    "print(\"\\nNumber of rows in rating.csv: \", len(rating_df))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7b1ecac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
