--- a/main.ipynb
+++ b/main.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "474eaccc",
+   "metadata": {},
+   "source": [
+    "**TASK 1 - ANALYSIS**\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "948aca9e",
    "metadata": {},
    "outputs": [
@@ -155,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cp/qnxjs_1j4t16tppddxshp8b80000gn/T/ipykernel_25732/4085292097.py:105: FutureWarning: \n",
+      "/var/folders/cp/qnxjs_1j4t16tppddxshp8b80000gn/T/ipykernel_61559/2573631928.py:107: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -280,7 +288,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cp/qnxjs_1j4t16tppddxshp8b80000gn/T/ipykernel_25732/4085292097.py:190: FutureWarning: \n",
+      "/var/folders/cp/qnxjs_1j4t16tppddxshp8b80000gn/T/ipykernel_61559/2573631928.py:193: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -457,7 +465,7 @@
     "plt.ylabel('Count')\n",
     "plt.title('Rating Distribution')\n",
     "plt.tight_layout()\n",
-    "plt.savefig('images/rating_distribution.png')\n",
+    "plt.savefig('images/rating_distribution_1.png')\n",
     "plt.show()\n",
     "\n",
     "# 5. Outliers\n",
@@ -540,9 +548,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c03cf76d",
+   "metadata": {},
+   "source": [
+    "**TASK 2 - PREPROCESSING**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c7b1ecac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "################## ANIME.CSV PREPROCESSING ################## \n",
+      "\n",
+      "Missing values in 'episodes' before filling:\n",
+      "340\n",
+      "Median episodes: 2.0\n",
+      "Missing values in 'episodes' after filling:\n",
+      "0\n",
+      "\n",
+      "Missing values in 'genre' before filling:\n",
+      "62\n",
+      "Missing values in 'genre' after filling:\n",
+      "0\n",
+      "\n",
+      "Missing values in 'type' before filling:\n",
+      "25\n",
+      "Mode type: TV\n",
+      "Missing values in 'type' after filling:\n",
+      "0\n",
+      "\n",
+      "Missing values in 'rating' before filling:\n",
+      "230\n",
+      "Mean rating: 6.473901690981432\n",
+      "Missing values in 'rating' after filling:\n",
+      "0\n",
+      "\n",
+      "Missing values in 'rating' before dropping:\n",
+      "1476496\n",
+      "Missing values in 'rating' after dropping:\n",
+      "0\n",
+      "\n",
+      "Number of duplicate ratings before dropping: 7\n",
+      "Duplicate rows and their counts:\n",
+      "   user_id  anime_id  count\n",
+      "0    42653      1575      2\n",
+      "1    42653      2001      2\n",
+      "2    42653     11757      2\n",
+      "3    42653     16498      2\n",
+      "4    42653     20507      2\n",
+      "5    42653     22319      2\n",
+      "6    42653     23283      2\n"
+     ]
+    }
+   ],
+   "source": [
+    "######################################################################\n",
+    "############### TASK 2 (Preprocessing) ###############\n",
+    "######################################################################\n",
+    "\n",
+    "anime_df = pd.read_csv('data/anime.csv')\n",
+    "rating_df = pd.read_csv('data/rating.csv')\n",
+    "\n",
+    "# --------- Preprocess anime.csv ---------\n",
+    "print(\"\\n################## ANIME.CSV PREPROCESSING ################## \")\n",
+    "\n",
+    "# 1. Handle 'episodes'\n",
+    "anime_df['episodes'] = pd.to_numeric(anime_df['episodes'], errors='coerce')\n",
+    "print(\"\\nMissing values in 'episodes' before filling:\")\n",
+    "print(anime_df['episodes'].isnull().sum())\n",
+    "median_episodes = anime_df['episodes'].median()\n",
+    "print(f\"Median episodes: {median_episodes}\")\n",
+    "anime_df.fillna({'episodes': median_episodes}, inplace=True) # Fill NaN values with median\n",
+    "print(\"Missing values in 'episodes' after filling:\")\n",
+    "print(anime_df['episodes'].isnull().sum())\n",
+    "\n",
+    "# 2. Handle 'genre'\n",
+    "print(\"\\nMissing values in 'genre' before filling:\")\n",
+    "print(anime_df['genre'].isnull().sum())\n",
+    "anime_df.fillna({'genre': 'Unknown'}, inplace=True) # Fill NaN values with 'Unknown'\n",
+    "anime_df['genre'] = anime_df['genre'].str.split(', ')\n",
+    "anime_df['genre'] = anime_df['genre'].apply(lambda x: [i.strip() for i in x]) # Strip whitespace from each genre\n",
+    "print(\"Missing values in 'genre' after filling:\")\n",
+    "print(anime_df['genre'].isnull().sum())\n",
+    "\n",
+    "# 3. Handle 'type'\n",
+    "print(\"\\nMissing values in 'type' before filling:\")\n",
+    "print(anime_df['type'].isnull().sum())\n",
+    "mode_type = anime_df['type'].mode()[0]\n",
+    "print(f\"Mode type: {mode_type}\")\n",
+    "anime_df.fillna({'type': mode_type}, inplace=True) # Fill NaN values with mode\n",
+    "print(\"Missing values in 'type' after filling:\")\n",
+    "print(anime_df['type'].isnull().sum())\n",
+    "\n",
+    "# Handle 'rating'\n",
+    "print(\"\\nMissing values in 'rating' before filling:\")\n",
+    "print(anime_df['rating'].isnull().sum())\n",
+    "mean_rating = anime_df['rating'].mean()\n",
+    "print(f\"Mean rating: {mean_rating}\")\n",
+    "anime_df.fillna({'rating': mean_rating}, inplace=True) # Fill NaN values with mean\n",
+    "print(\"Missing values in 'rating' after filling:\")\n",
+    "print(anime_df['rating'].isnull().sum())\n",
+    "\n",
+    "# --- Preprocess rating.csv ---\n",
+    "# Handle -1 as missing ratings\n",
+    "rating_df.replace({-1: np.nan}, inplace=True)\n",
+    "# drop rows with NaN ratings\n",
+    "print(\"\\nMissing values in 'rating' before dropping:\")\n",
+    "print(rating_df['rating'].isnull().sum())\n",
+    "rating_df.dropna(subset=['rating'], inplace=True)\n",
+    "print(\"Missing values in 'rating' after dropping:\")\n",
+    "print(rating_df['rating'].isnull().sum())\n",
+    "\n",
+    "# Drop duplicate ratings if any\n",
+    "# Count and show duplicated ratings\n",
+    "duplicates = rating_df[rating_df.duplicated(subset=['user_id', 'anime_id'], keep=False)]\n",
+    "duplicate_counts = duplicates.groupby(['user_id', 'anime_id']).size().reset_index(name='count')\n",
+    "duplicate_counts = duplicate_counts[duplicate_counts['count'] > 1]\n",
+    "\n",
+    "print(\"\\nNumber of duplicate ratings before dropping:\", len(duplicates) // 2)\n",
+    "print(\"Duplicate rows and their counts:\")\n",
+    "print(duplicate_counts)\n",
+    "rating_df.drop_duplicates(subset=['user_id', 'anime_id'], inplace=True)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7b1ecac",
+   "id": "280a5fb0",
    "metadata": {},
    "outputs": [],
    "source": []
