Refactor collaborative filtering implementation: streamline data preparation and model training for KNN

--- a/main.ipynb
+++ b/main.ipynb
@@ -694,129 +694,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "4883656c",
+   "execution_count": null,
+   "id": "02d2605d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Number of rows in train_df: 5067188\n",
-      "\n",
-      "Number of rows with NaN ratings in train_df after filling: 2\n",
-      "RMSE for n_components=20: 5.0966\n",
-      "RMSE for n_components=30: 5.1198\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/raffaeleperri/Desktop/Master/2nd_Semester/Data Analytics/Project_2/anime_rec_systems/.venv/lib/python3.12/site-packages/sklearn/decomposition/_nmf.py:1742: ConvergenceWarning: Maximum number of iterations 500 reached. Increase it to improve convergence.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE for n_components=40: 5.1626\n",
-      "RMSE for n_components=50: 5.1759\n",
-      "\n",
-      "Best n_components: 20\n",
-      "Best RMSE: 5.0966\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.decomposition import TruncatedSVD\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.decomposition import NMF\n",
-    "from scipy.sparse import csr_matrix\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Filter out users with only one rating\n",
-    "user_counts = rating_df['user_id'].value_counts()\n",
-    "valid_users = user_counts[user_counts > 1].index\n",
-    "filtered_rating_df = rating_df[rating_df['user_id'].isin(valid_users)]\n",
+    "print(\"\\n################## TASK 3: COLLABORATIVE FILTERING ################## \")\n",
+    "# -------------------- Prepare Data --------------------\n",
+    "# Convert user_id and anime_id to categorical variables\n",
+    "rating_df['user_id'] = rating_df['user_id'].astype('category')\n",
+    "rating_df['anime_id'] = rating_df['anime_id'].astype('category')\n",
     "\n",
-    "# Split the data into train and test sets\n",
-    "train_df, test_df = train_test_split(filtered_rating_df, test_size=0.2, random_state=42, stratify=filtered_rating_df['user_id'])\n",
+    "# Create a user-item matrix\n",
+    "user_item_matrix = rating_df.pivot(index='user_id', columns='anime_id', values='rating')\n",
     "\n",
-    "train_df['rating'] = np.nan\n",
-    "print(\"\\nNumber of rows in train_df:\", len(train_df))\n",
-    "# Merge train_df with anime_df on anime_id\n",
-    "train_df = train_df.merge(anime_df[['anime_id', 'rating']], on='anime_id', how='left', suffixes=('', '_anime'))\n",
+    "# Fill missing values with 0s\n",
+    "user_item_matrix.fillna(0, inplace=True)\n",
     "\n",
-    "# Fill NaN ratings in train_df with the average rating from anime_df\n",
-    "train_df['rating'] = train_df['rating'].fillna(train_df['rating_anime'])\n",
-    "print(\"\\nNumber of rows with NaN ratings in train_df after filling:\", train_df['rating'].isnull().sum()) # Two rows with NaN ratings becuase do not have that anime in anime_df\n",
-    "# drop the rows with NaN ratings\n",
-    "train_df = train_df.dropna(subset=['rating'])\n",
-    "# Drop the auxiliary column used for merging\n",
-    "train_df = train_df.drop(columns=['rating_anime'])\n",
+    "# Train-test split\n",
+    "train_df, test_df = train_test_split(rating_df, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Create user-item matrix\n",
-    "user_item_matrix = train_df.pivot(index='user_id', columns='anime_id', values='rating').fillna(0)\n",
+    "# -------------------- Align the user-item matrices --------------------\n",
     "\n",
-    "# Convert to sparse matrix\n",
-    "sparse_matrix = csr_matrix(user_item_matrix.values)\n",
+    "# Create user-item matrices for both train and test sets\n",
+    "train_user_item_matrix = train_df.pivot(index='user_id', columns='anime_id', values='rating')\n",
+    "test_user_item_matrix = test_df.pivot(index='user_id', columns='anime_id', values='rating')\n",
     "\n",
-    "# Hyperparameter tuning: Test with different numbers of components\n",
-    "n_components_values = [20, 30, 40, 50]\n",
-    "best_rmse = float('inf')\n",
-    "best_n_components = None\n",
+    "# Ensure that both matrices have the same set of anime_id (columns)\n",
+    "common_anime_ids = train_user_item_matrix.columns.intersection(test_user_item_matrix.columns)\n",
     "\n",
-    "for n_components in n_components_values:\n",
-    "    # Apply Non-Negative Matrix Factorization (NMF)\n",
-    "    nmf = NMF(n_components=n_components, init='random', random_state=42, max_iter=500)\n",
-    "    user_features = nmf.fit_transform(sparse_matrix)\n",
-    "    item_features = nmf.components_\n",
+    "# Reindex the matrices so that they contain the same columns\n",
+    "train_user_item_matrix = train_user_item_matrix[common_anime_ids].fillna(0)\n",
+    "test_user_item_matrix = test_user_item_matrix[common_anime_ids].fillna(0)\n",
     "\n",
-    "    # Reconstruct the predicted ratings matrix\n",
-    "    # predicted_ratings_matrix = np.dot(user_features, item_features)\n",
-    "    # predicted_ratings_df = pd.DataFrame(predicted_ratings_matrix, index=user_item_matrix.index, columns=user_item_matrix.columns)\n",
-    "    # Compute dot product\n",
-    "    predicted_ratings_matrix = np.dot(user_features, item_features)\n",
+    "# -------------------- Model 1: User-Based KNN --------------------\n",
+    "print(\"\\nTraining KNN (User-Based Collaborative Filtering) model...\")\n",
     "\n",
-    "    # Rescale to match 1–10 rating scale\n",
-    "    scaler = MinMaxScaler(feature_range=(1, 10))\n",
-    "    predicted_ratings_matrix = scaler.fit_transform(predicted_ratings_matrix)\n",
+    "# Use KNeighborsRegressor for user-based collaborative filtering\n",
+    "knn = KNeighborsRegressor(metric='cosine', n_neighbors=5)\n",
     "\n",
-    "    predicted_ratings_df = pd.DataFrame(predicted_ratings_matrix, index=user_item_matrix.index, columns=user_item_matrix.columns)\n",
+    "# Train the KNN model\n",
+    "knn.fit(train_user_item_matrix.values, train_user_item_matrix.values)\n",
     "\n",
-    "    # Prediction function\n",
-    "    def predict_rating(user_id, anime_id):\n",
-    "        if user_id in predicted_ratings_df.index and anime_id in predicted_ratings_df.columns:\n",
-    "            return predicted_ratings_df.at[user_id, anime_id]\n",
-    "        return np.nan\n",
+    "# Make predictions for the test set\n",
+    "knn_preds = knn.predict(test_user_item_matrix.values)\n",
     "\n",
-    "    # Evaluate on test set\n",
-    "    test_df = test_df.copy()\n",
-    "    test_df['predicted_rating'] = test_df.apply(lambda row: predict_rating(row['user_id'], row['anime_id']), axis=1)\n",
+    "# Calculate RMSE for KNN model\n",
+    "rmse_knn = np.sqrt(mean_squared_error(test_user_item_matrix.values.flatten(), knn_preds.flatten()))\n",
     "\n",
-    "    # Drop rows where prediction is not possible\n",
-    "    valid_test_df = test_df.dropna(subset=['predicted_rating'])\n",
-    "\n",
-    "    # Compute RMSE\n",
-    "    rmse = np.sqrt(mean_squared_error(valid_test_df['rating'], valid_test_df['predicted_rating']))\n",
-    "    print(f\"RMSE for n_components={n_components}: {rmse:.4f}\")\n",
-    "\n",
-    "    if rmse < best_rmse:\n",
-    "        best_rmse = rmse\n",
-    "        best_n_components = n_components\n",
-    "\n",
-    "# Best n_components and corresponding RMSE\n",
-    "print(f\"\\nBest n_components: {best_n_components}\")\n",
-    "print(f\"Best RMSE: {best_rmse:.4f}\")\n",
-    "\n",
-    "# save the dataset with both real and predicted ratings\n",
-    "train_df.to_csv('data/train_df.csv', index=False)\n",
-    "test_df.to_csv('data/test_df.csv', index=False)\n"
+    "# -------------------- Results --------------------\n",
+    "print(\"\\n################## MODEL PERFORMANCE ##################\")\n",
+    "print(f\"KNN (User-Based) RMSE: {rmse_knn:.4f}\")"
    ]
   }
  ],
