--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "948aca9e",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cp/qnxjs_1j4t16tppddxshp8b80000gn/T/ipykernel_67826/2573631928.py:107: FutureWarning: \n",
+      "/var/folders/cp/qnxjs_1j4t16tppddxshp8b80000gn/T/ipykernel_3330/2573631928.py:107: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -288,7 +288,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cp/qnxjs_1j4t16tppddxshp8b80000gn/T/ipykernel_67826/2573631928.py:193: FutureWarning: \n",
+      "/var/folders/cp/qnxjs_1j4t16tppddxshp8b80000gn/T/ipykernel_3330/2573631928.py:193: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "c7b1ecac",
    "metadata": {},
    "outputs": [],
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "02d2605d",
    "metadata": {},
    "outputs": [
@@ -650,6 +650,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "################## ANIME.CSV PREPROCESSING ################## \n",
+      "\n",
+      "Missing values in 'episodes' before filling:\n",
+      "340\n",
+      "Median episodes: 2.0\n",
+      "Missing values in 'episodes' after filling:\n",
+      "0\n",
+      "\n",
+      "Missing values in 'genre' before filling:\n",
+      "62\n",
+      "Missing values in 'genre' after filling:\n",
+      "0\n",
+      "\n",
+      "Missing values in 'type' before filling:\n",
+      "25\n",
+      "Mode type: TV\n",
+      "Missing values in 'type' after filling:\n",
+      "0\n",
+      "\n",
+      "Missing values in 'rating' before filling:\n",
+      "230\n",
+      "Mean rating: 6.473901690981432\n",
+      "Missing values in 'rating' after filling:\n",
+      "0\n",
+      "\n",
+      "################## RATING.CSV PREPROCESSING ################## \n",
+      "\n",
+      "Missing values in 'rating' before dropping:\n",
+      "1476496\n",
+      "Missing values in 'rating' after dropping:\n",
+      "0\n",
+      "\n",
+      "Number of duplicate ratings before dropping: 7\n",
+      "Duplicate rows and their counts:\n",
+      "   user_id  anime_id  count\n",
+      "0    42653      1575      2\n",
+      "1    42653      2001      2\n",
+      "2    42653     11757      2\n",
+      "3    42653     16498      2\n",
+      "4    42653     20507      2\n",
+      "5    42653     22319      2\n",
+      "6    42653     23283      2\n",
+      "Rating length after dropping duplicates: 6337234\n",
       "\n",
       "################## TASK 3: COLLABORATIVE FILTERING ################## \n",
       "\n",
@@ -730,7 +774,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "f04999fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item-mean baseline → MAE: 1.1085\n",
+      "Item-mean baseline → RMSE: 1.4312\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/cp/qnxjs_1j4t16tppddxshp8b80000gn/T/ipykernel_3330/3294342831.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  item_means = rating_df.groupby('anime_id')['rating'].mean().to_dict()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1) calcola le medie per profilo dal train\n",
+    "item_means = rating_df.groupby('anime_id')['rating'].mean().to_dict()\n",
+    "\n",
+    "# 2) mappa sul test e riempi i NaN con la media globale\n",
+    "test_df['pred_item_mean'] = test_df['anime_id'].map(item_means)\n",
+    "\n",
+    "# 3) calcola MAE\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "import numpy as np\n",
+    "\n",
+    "mae_item  = mean_absolute_error(test_df['rating'], test_df['pred_item_mean'])\n",
+    "rmse_item = np.sqrt(mean_squared_error(test_df['rating'], test_df['pred_item_mean']))\n",
+    "\n",
+    "print(f\"Item-mean baseline → MAE: {mae_item:.4f}\")\n",
+    "print(f\"Item-mean baseline → RMSE: {rmse_item:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "c492634f",
    "metadata": {},
    "outputs": [
@@ -936,7 +1021,7 @@
        "[5 rows x 8260 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
