--- a/main.ipynb
+++ b/main.ipynb
@@ -163,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cp/qnxjs_1j4t16tppddxshp8b80000gn/T/ipykernel_3330/2573631928.py:107: FutureWarning: \n",
+      "/var/folders/cp/qnxjs_1j4t16tppddxshp8b80000gn/T/ipykernel_47127/3983638592.py:118: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -288,7 +288,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cp/qnxjs_1j4t16tppddxshp8b80000gn/T/ipykernel_3330/2573631928.py:193: FutureWarning: \n",
+      "/var/folders/cp/qnxjs_1j4t16tppddxshp8b80000gn/T/ipykernel_47127/3983638592.py:204: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -329,6 +329,17 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from tqdm import tqdm\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
     "\n",
     "############### Helper functions ###############\n",
     "\n",
@@ -650,8 +661,6 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "################## TASK 3: CONTENT-BASED FILTERING ################## \n",
-      "\n",
       "################## ANIME.CSV PREPROCESSING ################## \n",
       "\n",
       "Missing values in 'episodes' before filling:\n",
@@ -709,18 +718,6 @@
     }
    ],
    "source": [
-
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.decomposition import TruncatedSVD\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "\n",
-    "\n",
-    "# -------------------- Main Script --------------------\n",
-    "print(\"\\n################## TASK 3: CONTENT-BASED FILTERING ################## \")\n",
-    "\n",
     "# Load and preprocess\n",
     "anime_df = pd.read_csv('data/anime.csv')\n",
     "rating_df = pd.read_csv('data/rating.csv')\n",
@@ -777,6 +774,182 @@
     "# -------------------- Results --------------------\n",
     "print(\"\\n################## MODEL PERFORMANCE ##################\")\n",
     "print(f\"KNN (User-Based) RMSE: {rmse_knn:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "20dda3cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "################## TASK 3: CONTENT-BASED FILTERING ################## \n",
+      "\n",
+      "################## ANIME.CSV PREPROCESSING ################## \n",
+      "\n",
+      "Missing values in 'episodes' before filling:\n",
+      "340\n",
+      "Median episodes: 2.0\n",
+      "Missing values in 'episodes' after filling:\n",
+      "0\n",
+      "\n",
+      "Missing values in 'genre' before filling:\n",
+      "62\n",
+      "Missing values in 'genre' after filling:\n",
+      "0\n",
+      "\n",
+      "Missing values in 'type' before filling:\n",
+      "25\n",
+      "Mode type: TV\n",
+      "Missing values in 'type' after filling:\n",
+      "0\n",
+      "\n",
+      "Missing values in 'rating' before filling:\n",
+      "230\n",
+      "Mean rating: 6.473901690981432\n",
+      "Missing values in 'rating' after filling:\n",
+      "0\n",
+      "\n",
+      "################## RATING.CSV PREPROCESSING ################## \n",
+      "\n",
+      "Missing values in 'rating' before dropping:\n",
+      "1476496\n",
+      "Missing values in 'rating' after dropping:\n",
+      "0\n",
+      "\n",
+      "Number of duplicate ratings before dropping: 7\n",
+      "Duplicate rows and their counts:\n",
+      "   user_id  anime_id  count\n",
+      "0    42653      1575      2\n",
+      "1    42653      2001      2\n",
+      "2    42653     11757      2\n",
+      "3    42653     16498      2\n",
+      "4    42653     20507      2\n",
+      "5    42653     22319      2\n",
+      "6    42653     23283      2\n",
+      "Rating length after dropping duplicates: 6337234\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Predicting for users: 100%|██████████| 62390/62390 [03:46<00:00, 275.12it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE on test set: 1.3337\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -------------------- Preprocessing --------------------\n",
+    "def clean_genres(anime_df):\n",
+    "    anime_df = anime_df.copy()\n",
+    "    anime_df['genre'] = anime_df['genre'].fillna('Unknown')\n",
+    "    anime_df['genre'] = anime_df['genre'].apply(lambda x: x.split(', ') if isinstance(x, str) else ['Unknown'])\n",
+    "    return anime_df\n",
+    "\n",
+    "\n",
+    "# -------------------- Feature Engineering --------------------\n",
+    "def build_anime_features(anime_df):\n",
+    "    genres = sorted({genre for genre_list in anime_df['genre'] for genre in genre_list})\n",
+    "    features = pd.DataFrame(index=anime_df['anime_id'])\n",
+    "\n",
+    "    for genre in genres:\n",
+    "        features[f'genre_{genre}'] = anime_df['genre'].apply(lambda x: 1 if genre in x else 0)\n",
+    "\n",
+    "    # Optional: Add other features\n",
+    "    if 'type' in anime_df.columns:\n",
+    "        type_dummies = pd.get_dummies(anime_df['type'], prefix='type')\n",
+    "        features = pd.concat([features, type_dummies.set_index(anime_df['anime_id'])], axis=1)\n",
+    "\n",
+    "    if 'rating' in anime_df.columns:\n",
+    "        features['rating'] = anime_df.set_index('anime_id')['rating']\n",
+    "    if 'members' in anime_df.columns:\n",
+    "        features['members'] = anime_df.set_index('anime_id')['members']\n",
+    "\n",
+    "    features = features.fillna(0)\n",
+    "    scaler = StandardScaler()\n",
+    "    scaled = pd.DataFrame(scaler.fit_transform(features), index=features.index, columns=features.columns)\n",
+    "\n",
+    "    return scaled\n",
+    "\n",
+    "\n",
+    "# -------------------- Prediction Logic --------------------\n",
+    "def predict_rating(user_id, anime_id, user_ratings, sim_matrix, anime_id_to_idx):\n",
+    "    if anime_id not in anime_id_to_idx:\n",
+    "        return user_ratings['rating'].mean()\n",
+    "    \n",
+    "    anime_idx = anime_id_to_idx[anime_id]\n",
+    "    rated_animes = user_ratings['anime_id'].values\n",
+    "    rated_ratings = user_ratings['rating'].values\n",
+    "\n",
+    "    total_sim = 0\n",
+    "    weighted_sum = 0\n",
+    "\n",
+    "    for i, rated_anime_id in enumerate(rated_animes):\n",
+    "        if rated_anime_id in anime_id_to_idx:\n",
+    "            rated_idx = anime_id_to_idx[rated_anime_id]\n",
+    "            sim = sim_matrix[anime_idx, rated_idx]\n",
+    "            if sim > 0:\n",
+    "                weighted_sum += sim * rated_ratings[i]\n",
+    "                total_sim += sim\n",
+    "\n",
+    "    return weighted_sum / total_sim if total_sim > 0 else rated_ratings.mean()\n",
+    "\n",
+    "\n",
+    "# -------------------- Main Script --------------------\n",
+    "print(\"\\n################## TASK 3: CONTENT-BASED FILTERING ################## \")\n",
+    "\n",
+    "# Load and preprocess\n",
+    "anime_df = pd.read_csv('data/anime.csv')\n",
+    "rating_df = pd.read_csv('data/rating.csv')\n",
+    "# anime_df = clean_genres(anime_df)\n",
+    "anime_df, rating_df = preprocessing(anime_df, rating_df)\n",
+    "\n",
+    "anime_features_scaled = build_anime_features(anime_df)\n",
+    "anime_id_to_idx = {aid: i for i, aid in enumerate(anime_features_scaled.index)}\n",
+    "similarity_matrix = cosine_similarity(anime_features_scaled)\n",
+    "\n",
+    "train_df, test_df = train_test_split(rating_df, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Predict with progress bar\n",
+    "predictions = []\n",
+    "actuals = []\n",
+    "\n",
+    "test_user_groups = test_df.groupby('user_id')\n",
+    "\n",
+    "for user_id, user_test_data in tqdm(test_user_groups, desc=\"Predicting for users\"):\n",
+    "    user_train = train_df[train_df['user_id'] == user_id]\n",
+    "\n",
+    "    if user_train.empty:\n",
+    "        predictions.extend([train_df['rating'].mean()] * len(user_test_data))\n",
+    "        actuals.extend(user_test_data['rating'].values)\n",
+    "        continue\n",
+    "\n",
+    "    for _, row in user_test_data.iterrows():\n",
+    "        pred = predict_rating(user_id, row['anime_id'], user_train, similarity_matrix, anime_id_to_idx)\n",
+    "        predictions.append(pred)\n",
+    "        actuals.append(row['rating'])\n",
+    "\n",
+    "# Evaluate\n",
+    "rmse = np.sqrt(mean_squared_error(actuals, predictions))\n",
+    "print(f\"RMSE on test set: {rmse:.4f}\")"
    ]
   }
  ],
