--- a/main.ipynb
+++ b/main.ipynb
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "02d2605d",
    "metadata": {},
    "outputs": [
@@ -718,6 +718,10 @@
     }
    ],
    "source": [
+    "#################################################################################\n",
+    "############### TASK 3-4 Recommender system models and evaluation ###############\n",
+    "#################################################################################\n",
+    "\n",
     "# Load and preprocess\n",
     "anime_df = pd.read_csv('data/anime.csv')\n",
     "rating_df = pd.read_csv('data/rating.csv')\n",
@@ -778,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "20dda3cb",
    "metadata": {},
    "outputs": [
@@ -857,7 +861,7 @@
     }
    ],
    "source": [
-    "# -------------------- Preprocessing --------------------\n",
+    "# --------------------  Prepare Data --------------------\n",
     "def clean_genres(anime_df):\n",
     "    anime_df = anime_df.copy()\n",
     "    anime_df['genre'] = anime_df['genre'].fillna('Unknown')\n",
@@ -913,9 +917,8 @@
     "    return weighted_sum / total_sim if total_sim > 0 else rated_ratings.mean()\n",
     "\n",
     "\n",
-    "# -------------------- Main Script --------------------\n",
     "print(\"\\n################## TASK 3: CONTENT-BASED FILTERING ################## \")\n",
-    "\n",
+    "# -------------------- Model 2: Content-Based Filtering --------------------\n",
     "# Load and preprocess\n",
     "anime_df = pd.read_csv('data/anime.csv')\n",
     "rating_df = pd.read_csv('data/rating.csv')\n",
